sass/04_Composants/_media-card.scss
.media-card{
    position: relative;
    @include staggerAnim(1500ms, 0.3s, 2rem);
    img, video{
        border-radius: 10px;
        width: 320px;
        height: 320px;
        object-fit: cover;
    }
    .media-card__title{
        margin: 10px 0 10px 0;
        color: $primaryColor;
        line-height: 30px;
        font-size: 20px;
        font-weight: 400;
        max-width: 250px;
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
    }

    .media-card__infos{
        display: flex;
        flex-direction: row;
    }

    .media-card__likes{
        display: inline-block;
        position: absolute;
        right: 0;
        bottom: 12px;
        color: $primaryColor;

        .media-card__nb-likes{
            font-size: 24px;
            font-weight: 500;
            margin-right: 4px;
        }

        i{
            font-size: 20px;    // Icone size
        }
    }
}

